Fixed broken CSS that overextended the web content width

--- a/www/css/wonsole.css
+++ b/www/css/wonsole.css
@@ -72,10 +72,10 @@ form {
     padding-left: 12px;  
 }
 /*BOTTOM BAR*/
-.bottombar {
-    background:black;
+/*.bottombar {
+    background:black;*/
     /*background-image:url("../image/bottombar.png");*/
-    background-repeat:repeat-x;
+/*    background-repeat:repeat-x;
     
     color:#381018;    
     
@@ -87,7 +87,23 @@ form {
 
     position: absolute; 
     bottom: 0;
+}*/
+
+/*BOTTOM BAR*/
+.bottombar {
+    background:black;
+    
+    color:#381018;    
+    
+    padding:0px; 
+    margin:0px; 
+    width:100%;
+    height: 1.5em;
+
+    position: absolute; 
+    bottom: 0;
 }
+
 /*PREVENTS WRAPPING INLINE-BLOCK DIVS*/
 .noWrapContainer {
     background:black;
@@ -164,6 +180,11 @@ td {
 /*Odd table row*/
 .oddRow {
     background:gray;
+}
+
+/*Add Padding to left*/
+.paddingLeft{
+    padding-left:8px;
 }
 
 /*INVISIBLE BOX FOR PUSHING THE BOTTOM BAR*/
